--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <button id="btn">Reset</button>
+    </div>
+
 </body>
 </html>
